# rust-image-mirror

./: .gitignore  7465.yaml  Cargo.toml  Makefile  README.md  imagesetconfig.yaml
src/: main.rs
src/additional/: collector.rs
src/api/: schema.rs
src/auth/: credentials.rs
src/batch/: copy.rs
src/config/: load.rs  read.rs
src/diff/: metadata_cache.rs
src/error/: handler.rs
src/image/: copy.rs
src/index/: resolve.rs
src/log/: logging.rs
src/manifests/: catalogs.rs
src/operator/: collector.rs
src/release/: collector.rs
test-artifacts/index-manifest/v1/: manifest.json
