[package]
name = "rust-image-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
serde_with = "*"
base64 = { version = "0.21"}
futures = { version = "0.3"}
flate2 = "1.0.25"
tar = "0.4.38"
serde_yaml = "0.9.21"
semver = "1.0.17"
walkdir = "2.4.0"
chrono = "0.4.31"
exitcode = "1.1.2"
tempdir = "0.3.7"
clap = { version = "4.4.6", features = ["derive"] }
async-trait = "0.1.74"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4.3" 
serial_test = "2.0.0"
mockito = "1.2.0"
