[package]
name = "rust-image-mirror"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
serde_with = "*"
base64 = { version = "0.21"}
futures = { version = "0.3"}
flate2 = "1.0.25"
tar = "0.4.38"
semver = "1.0.17"
walkdir = "2.4.0"
chrono = "0.4.31"
exitcode = "1.1.2"
tempdir = "0.3.7"
clap = { version = "4.4.6", features = ["derive"] }
async-trait = "0.1.74"
sha2 = "0.10.8"
hex = "0.4.3"
urlencoding = "2.1.3"
rm_rf = "0.6.2"
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.1.3" }
mirror-auth = { git = "https://github.com/lmzuccarelli/rust-mirror-auth", branch = "main" }
mirror-copy = { git = "https://github.com/lmzuccarelli/rust-mirror-copy", branch = "main", version = "0.1.3" }
mirror-catalog = { git = "https://github.com/lmzuccarelli/rust-mirror-catalog", branch = "main" }
mirror-config = { git = "https://github.com/lmzuccarelli/rust-mirror-config", branch = "main" }
mirror-catalog-index = { git = "https://github.com/lmzuccarelli/rust-mirror-catalog-index", branch = "main", version = "0.1.3"}

[dev-dependencies]
tokio-test = "0.4.3" 
serial_test = "2.0.0"
mockito = "1.2.0"

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization

